--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "example_package_YOUR_USERNAME_HERE"
+name = "dynalite-pdeg"
 version = "0.0.1"
 authors = [
-  { name="Example Author", email="author@example.com" },
+  { name="Patrick Pellacani Muller", email="patrickpmueller@proton.me" },
 ]
-description = "A small example package"
+description = "An API for the Dynalite PDEG, using telnet"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -18,5 +18,5 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/patrickpmueller/dynalite-pdeg"
+Issues = "https://github.com/patrickpmueller/dynalite-pdeg/issues"
