--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "dynalite-pdeg"
+name = "dynalite_pdeg"
 dependencies = ["asyncio_telnet", "aiohttp"]
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="Patrick Pellacani Muller", email="patrickpmueller@proton.me" },
 ]
 description = "An API for the Dynalite PDEG, using telnet"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
